--- a/src/app/article-list/article-list.component.css
+++ b/src/app/article-list/article-list.component.css
@@ -99,6 +99,14 @@ body {
     min-width: 100%;
 }
 
-#articleTitle {
+.articleTitle {
     margin-left: 2vw;
+}
+
+#loadMoreBtn {
+    margin-top: 3vh;
+    text-align: center;
+}
+#loadMoreBtn button {
+    margin: auto;
 }
