added share buttons to articles

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -31,6 +31,24 @@
                         Par {{ article.author.username }}, Rédacteur
                         onlyweebs.com
                     </p>
+                    <a
+                        class="twitter-share-button sharer"
+                        href="https://twitter.com/intent/tweet?url={{
+                            pageUrl
+                        }}&hashtags=onlyweebs"
+                        data-url="www.google.com"
+                        id="share-tw"
+                    >
+                        <i class="fa fa-twitter-square"></i>
+                    </a>
+                    <a
+                        id="share-fb"
+                        href="http://www.facebook.com/sharer/sharer.php?u={{
+                            pageUrl
+                        }}&t=Jesaispas"
+                        target="_blank"
+                        class="share-popup sharer fa fa-facebook"
+                    ></a>
                 </div>
                 <div class="row d-flex justify-content-center">
                     <div
@@ -134,79 +152,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!--<div class="articleBox rounded">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img
-                                loading="lazy"
-                                class="rounded-left"
-                                src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg"
-                                alt=""
-                            />
-                        </div>
-                        <div class="col-md-6">
-                            <p>
-                                NieR Replicant ver.1.22474487139, pêche et
-                                jardinage : notre guide complet
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="articleBox rounded">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img
-                                loading="lazy"
-                                class="rounded-left"
-                                src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg"
-                                alt=""
-                            />
-                        </div>
-                        <div class="col-md-6">
-                            <p>
-                                NieR Replicant ver.1.22474487139, pêche et
-                                jardinage : notre guide complet
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="articleBox rounded">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img
-                                loading="lazy"
-                                class="rounded-left"
-                                src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg"
-                                alt=""
-                            />
-                        </div>
-                        <div class="col-md-6">
-                            <p>
-                                NieR Replicant ver.1.22474487139, pêche et
-                                jardinage : notre guide complet
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="articleBox rounded">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img
-                                loading="lazy"
-                                class="rounded-left"
-                                src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg"
-                                alt=""
-                            />
-                        </div>
-                        <div class="col-md-6">
-                            <p>
-                                NieR Replicant ver.1.22474487139, pêche et
-                                jardinage : notre guide complet
-                            </p>
-                        </div>
-                    </div>
-                </div>-->
             </div>
         </div>
     </div>
