writing articles is now possible only to admins

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -48,7 +48,10 @@
                     >LISTS</a
                 >
             </li>
-            <li *ngIf="isUserAuthenticated" class="nav-item">
+            <li
+                *ngIf="isUserAuthenticated && adminStatus === 'ROLE_ADMIN'"
+                class="nav-item"
+            >
                 <a
                     class="nav-link"
                     [routerLink]="['/editor']"
