--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -1,75 +1,252 @@
-<div class="container text-light">
-    <div class="row">
-        <div class="col">
-            <img
-                alt=""
-                class="img-fluid"
-                id="cover"
-                loading="lazy"
-                src="{{ anime.imgUrl }}"
-            />
-        </div>
-        <div class="col-8">
-            <h1 id="animeTitle">{{ anime.title }}</h1>
-            <div class="row">
-                <div class="col-6">
-                    <div id="parentLists" *ngIf="isConnected">
-                        <div class="input-group mb-3" id="default">
-                            <select
-                                [(ngModel)]="selectedList"
-                                id="optionSelectDefault"
-                                id="slct"
-                                name="slct"
-                                size="1"
-                            >
-                                <option
-                                    *ngFor="let list of userDefaultLists"
-                                    [value]="list.name"
+<body xmlns="http://www.w3.org/1999/html">
+    <div class="container text-light">
+        <div class="row">
+            <div class="col-md-3 col-lg-3 col-sm-6">
+                <img
+                    alt=""
+                    class="img-fluid"
+                    id="cover"
+                    loading="lazy"
+                    src="{{ anime.imgUrl }}"
+                />
+            </div>
+            <div class="col-8">
+                <p id="animeTitle">{{ anime.title }}</p>
+                <p>{{ anime.titleEnglish }}</p>
+                <hr />
+                <div class="row">
+                    <div class="col-md-6 col-lg-6 col-sm-8">
+                        <div *ngIf="isConnected" class="" id="parentLists">
+                            <div>Add to a default list</div>
+                            <div class="input-group" id="default">
+                                <select
+                                    [(ngModel)]="selectedList"
+                                    id="defaultList"
+                                    size="1"
                                 >
-                                    {{ list.name }}
-                                </option>
-                            </select>
-                            <div class="input-group-prepend">
-                                <button
-                                    (click)="addAnimeToList()"
-                                    class="btn btn-primary addToList"
-                                    type="button"
+                                    <option
+                                        *ngFor="let list of userDefaultLists"
+                                        [value]="list.name"
+                                    >
+                                        {{ list.name }}
+                                    </option>
+                                </select>
+                                <div class="input-group-prepend">
+                                    <button
+                                        (click)="addAnimeToList()"
+                                        class="btn btn-primary btn-sm addToList"
+                                        type="button"
+                                    >
+                                        ADD
+                                    </button>
+                                </div>
+                            </div>
+                            <br />
+                            <div>Add to a custom list</div>
+                            <div class="input-group" id="custom">
+                                <select
+                                    [(ngModel)]="selectedList"
+                                    id="customList"
+                                    size="1"
                                 >
-                                    ADD
-                                </button>
+                                    <option
+                                        *ngFor="let list of userCustomLists"
+                                        [value]="list.name"
+                                    >
+                                        {{ list.name }}
+                                    </option>
+                                </select>
+                                <div class="input-group-prepend">
+                                    <button
+                                        (click)="addAnimeToList()"
+                                        class="btn btn-primary btn-sm addToList"
+                                        type="button"
+                                    >
+                                        ADD
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col"></div>
-    </div>
-</div>
 
-<div class="container text-light">
-    <div class="row">
-        <div class="col">
-            <mat-accordion>
-                <mat-expansion-panel expanded>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title> Synopsis </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p class="synopsis">{{ anime.synopsis }}</p>
-                </mat-expansion-panel>
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title> Details </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p>I'm visible because I am open</p>
-                </mat-expansion-panel>
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title> Comments </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p>I'm visible because I am open</p>
-                </mat-expansion-panel>
-            </mat-accordion>
+            <div class="col-md-1 col-lg-1 col-sm-4" id="rating">tets</div>
         </div>
     </div>
-</div>
+
+    <div class="container text-light">
+        <div class="row">
+            <div class="col">
+                <mat-accordion>
+                    <mat-expansion-panel expanded>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title> Synopsis</mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <!-- SYNOPSIS -->
+                        <p class="synopsis">{{ anime.synopsis }}</p>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title> Details</mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <!-- DETAILS -->
+                        <table class="table text-light details">
+                            <tbody>
+                                <tr>
+                                    <th *ngIf="studios" scope="row">Studio</th>
+                                    <td>
+                                        {{
+                                            studios[0] !== ""
+                                                ? studios.toString()
+                                                : "not announced yet"
+                                        }}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th *ngIf="producers" scope="row">
+                                        Producer
+                                    </th>
+                                    <td>
+                                        {{
+                                            producers[0] !== ""
+                                                ? producers.toString()
+                                                : "not announced yet"
+                                        }}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Airing Date</th>
+                                    <td>
+                                        {{
+                                            anime.airing !== "None"
+                                                ? anime.airing
+                                                : "not announced yet"
+                                        }}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Number of episodes</th>
+                                    <td>
+                                        {{
+                                            anime.episodes
+                                                ? anime.episodes
+                                                : "not announced yet"
+                                        }}
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title> Comments</mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <!-- COMMENTAIRE -->
+                        <div class="row">
+                            <div
+                                *ngIf="comments !== undefined"
+                                [ngClass]="isConnected ? '' : ''"
+                                class="col-md-8 col-sm-9"
+                            >
+                                <div
+                                    *ngFor="
+                                        let comment of comments;
+                                        let index = index
+                                    "
+                                    class="row"
+                                >
+                                    <div
+                                        *ngIf="comment.user.image !== undefined"
+                                        class="
+                                            col-md-2 col-xs-5
+                                            comment-info
+                                            text-center
+                                        "
+                                    >
+                                        <img
+                                            alt="profile image"
+                                            class="rounded-circle img-fluid"
+                                            height="80"
+                                            loading="lazy"
+                                            src="data:image/webp;base64,{{
+                                                comment.user.image.content
+                                            }}"
+                                            width="80"
+                                        />
+                                        <div
+                                            style="
+                                                font-size: 1vw;
+                                                color: #097ce7;
+                                            "
+                                        >
+                                            {{ comment.user.username }}
+                                        </div>
+                                        <p>
+                                            {{
+                                                comment.date
+                                                    | date: "dd-MM-yyyy"
+                                            }}
+                                        </p>
+                                        <br />
+                                    </div>
+
+                                    <div
+                                        class="
+                                            container
+                                            col-md-10 col-xs-5
+                                            comment
+                                        "
+                                    >
+                                        {{ comment.body }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div *ngIf="isConnected" class="col-md-4 col-sm-3">
+                                <form
+                                    (ngSubmit)="sendAnimeComment()"
+                                    [formGroup]="commentForm"
+                                    id="align-form"
+                                >
+                                    <div class="form-group">
+                                        <h1>Leave a comment</h1>
+                                        <textarea
+                                            class="form-control"
+                                            cols="30"
+                                            formControlName="comment"
+                                            id="message"
+                                            name="msg"
+                                            rows="5"
+                                            style="background-color: black"
+                                        ></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                        <button
+                                            class="btn btn-primary"
+                                            type="submit"
+                                        >
+                                            {{
+                                                userHasComment
+                                                    ? "Edit Comment"
+                                                    : "Post Comment"
+                                            }}
+                                        </button>
+                                        <button
+                                            (click)="deleteAnimeComment()"
+                                            *ngIf="userHasComment"
+                                            class="btn btn-danger"
+                                            id="delete-button"
+                                            type="button"
+                                        >
+                                            Delete your comment
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </mat-expansion-panel>
+                </mat-accordion>
+            </div>
+        </div>
+    </div>
+</body>
