--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -211,7 +211,7 @@
                                                 />
                                                 <div
                                                     style="
-                                                        font-size: 1vw;
+                                                        font-size: 2vh;
                                                         color: #097ce7;
                                                     "
                                                 >
