--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -561,7 +561,6 @@
                         let article of listArticlesRunner;
                         let index = index
                     "
-                    id="featuretteBlock"
                 >
                     <hr class="featurette-divider" />
                     <div
@@ -600,40 +599,45 @@
                 </a>
                 <hr />
             </div>
-        </div>
-    </div>
-    <div *ngIf="listArticles.length < 5">
-        <a *ngFor="let article of listArticles; let index = index">
-            <hr class="featurette-divider" />
-            <div class="row featurette" routerLink="/articles/{{ article.id }}">
-                <div class="col-md-6 order-md-2">
-                    <h2 class="featurette-heading articleTitle">
-                        {{ article.title }}
-                    </h2>
-                </div>
-                <div class="col-md-5 order-md-1">
-                    <a
-                        style="position: absolute; top: 1vh"
-                        [style.background-color]="article.category.bgColor"
-                        class="p-1 badge badge-primary rounded-0"
-                        [routerLink]="['/articles/', article.id]"
-                        >{{ article.category.name }}</a
+            <div *ngIf="listArticles.length < 5">
+                <a *ngFor="let article of listArticles; let index = index">
+                    <div
+                        class="row featurette"
+                        routerLink="/articles/{{ article.id }}"
                     >
-                    <img
-                        loading="lazy"
-                        class="
-                            bottom
-                            bd-placeholder-img bd-placeholder-img-lg
-                            featurette-image
-                            mx-auto
-                            articleImage
-                        "
-                        src="{{ articleImageUrls[index + 5] }}"
-                        alt="article image"
-                    />
-                </div>
+                        <div class="col-md-6 order-md-2">
+                            <h2 class="featurette-heading articleTitle">
+                                {{ article.title }}
+                            </h2>
+                        </div>
+                        <div class="col-md-5 order-md-1">
+                            <a
+                                style="position: absolute; top: 1vh"
+                                [style.background-color]="
+                                    article.category.bgColor
+                                "
+                                class="p-1 badge badge-primary rounded-0"
+                                [routerLink]="['/articles/', article.id]"
+                                >{{ article.category.name }}</a
+                            >
+                            <img
+                                loading="lazy"
+                                class="
+                                    bottom
+                                    bd-placeholder-img bd-placeholder-img-lg
+                                    featurette-image
+                                    mx-auto
+                                    articleImage
+                                "
+                                src="{{ articleImageUrls[index] }}"
+                                alt="article image"
+                            />
+                        </div>
+                    </div>
+                    <hr *ngIf="index < 3" class="featurette-divider" />
+                </a>
             </div>
-        </a>
+        </div>
     </div>
     <div id="loadMoreBtn" *ngIf="enableLoadMore === true">
         <button (click)="loadMore()" class="btn btn-primary">Load more</button>
