--- a/src/app/article-list/article-list.component.html
+++ b/src/app/article-list/article-list.component.html
@@ -1,73 +1,88 @@
 <body>
-    <div class="text-light" *ngIf="listArticles">
-        <div id="titre_page" class="text-center">
-            <h1>Actualités</h1>
+    <div *ngIf="listArticles" class="text-light">
+        <div class="text-center" id="titre_page">
+            <h1 style="font-size: 4vh">News</h1>
         </div>
-        <div class="container">
+        <div class="container" style="background-color: transparent">
             <div>
-                <p>recherche avancée</p>
                 <div class="row">
                     <div class="col">
-                        <div ngbDropdown class="d-inline-block">
-                            <button
-                                class="btn btn-outline-primary"
-                                id="dropdownBasic1"
-                                ngbDropdownToggle
-                            >
-                                {{
-                                    selectedCategory
-                                        ? selectedCategory.name
-                                        : "Category"
-                                }}
-                            </button>
-                            <div
-                                ngbDropdownMenu
-                                aria-labelledby="dropdownBasic1"
-                            >
+                        <div class="input-group">
+                            <div class="d-inline-block" ngbDropdown>
                                 <button
-                                    *ngFor="let category of categories"
-                                    ngbDropdownItem
-                                    (click)="changeCategory(category)"
+                                    class="btn btn-outline-primary"
+                                    id="dropdownBasic1"
+                                    ngbDropdownToggle
                                 >
-                                    {{ category.name }}
+                                    {{
+                                        selectedCategory
+                                            ? selectedCategory.name
+                                            : "Category"
+                                    }}
                                 </button>
+                                <div
+                                    class="col"
+                                    aria-labelledby="dropdownBasic1"
+                                    ngbDropdownMenu
+                                >
+                                    <button
+                                        (click)="changeCategory(category)"
+                                        *ngFor="let category of categories"
+                                        ngbDropdownItem
+                                    >
+                                        {{ category.name }}
+                                    </button>
+                                </div>
                             </div>
+                            <input
+                                type="hidden"
+                                name="search_param"
+                                value="all"
+                                id="search_param"
+                            />
+                            <input
+                                type="text"
+                                class="form-control"
+                                name="x"
+                                [(ngModel)]="searchInputValue"
+                                placeholder="Search articles"
+                            />
+                            <span class="input-group-btn">
+                                <button
+                                    (click)="searchWithParams()"
+                                    class="btn btn-primary"
+                                >
+                                    Search
+                                </button>
+                            </span>
                         </div>
-                    </div>
-                    <div class="col">
-                        <input type="text" [(ngModel)]="searchInputValue" />
-                    </div>
-                    <div class="col">
-                        <button
-                            class="btn btn-primary"
-                            (click)="searchWithParams()"
-                        >
-                            Search
-                        </button>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="row" *ngIf="listArticles.length >= 5">
+        <div class="container">
+            <div *ngIf="listArticles.length >= 5" class="row">
                 <div class="row">
-                    <div class="col-12 pb-5">
+                    <div class="col-12 pb-5" style="">
                         <section class="row">
                             <div
                                 class="
-                                    col-12 col-md-6
+                                    col-12 col-md-6 col-sm-4
                                     pb-0 pb-md-3
                                     pt-2
                                     pr-md-1
                                 "
                             >
                                 <div
-                                    id="featured"
                                     class="carousel"
                                     data-ride="carousel"
+                                    id="featured"
                                 >
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
                                             <div
+                                                style="background-color: red"
                                                 class="
                                                     card
                                                     border-0
@@ -92,16 +107,16 @@
                                                             ]"
                                                         >
                                                             <img
-                                                                loading="lazy"
-                                                                id="image1"
+                                                                alt="Bootstrap news template"
                                                                 class="
                                                                     img-fluid
                                                                     w-100
                                                                 "
+                                                                id="image1"
+                                                                loading="lazy"
                                                                 src="{{
                                                                     articleImageUrls[0]
                                                                 }}"
-                                                                alt="Bootstrap news template"
                                                             />
                                                         </a>
                                                     </div>
@@ -115,6 +130,11 @@
                                                         "
                                                     >
                                                         <a
+                                                            [routerLink]="[
+                                                                '/articles/',
+                                                                listArticles[0]
+                                                                    .id
+                                                            ]"
                                                             [style.background-color]="
                                                                 listArticles[0]
                                                                     .category
@@ -126,11 +146,6 @@
                                                                 badge-primary
                                                                 rounded-0
                                                             "
-                                                            [routerLink]="[
-                                                                '/articles/',
-                                                                listArticles[0]
-                                                                    .id
-                                                            ]"
                                                         >
                                                             {{
                                                                 listArticles[0]
@@ -231,12 +246,12 @@
                                                         ]"
                                                     >
                                                         <img
-                                                            loading="lazy"
+                                                            alt="simple blog template bootstrap"
                                                             class="img-fluid"
+                                                            loading="lazy"
                                                             src="{{
                                                                 articleImageUrls[1]
                                                             }}"
-                                                            alt="simple blog template bootstrap"
                                                         />
                                                     </a>
                                                 </div>
@@ -250,6 +265,10 @@
                                                     "
                                                 >
                                                     <a
+                                                        [routerLink]="[
+                                                            '/articles/',
+                                                            listArticles[1].id
+                                                        ]"
                                                         [style.background-color]="
                                                             listArticles[1]
                                                                 .category
@@ -260,10 +279,6 @@
                                                             badge badge-primary
                                                             rounded-0
                                                         "
-                                                        [routerLink]="[
-                                                            '/articles/',
-                                                            listArticles[1].id
-                                                        ]"
                                                     >
                                                         {{
                                                             listArticles[1]
@@ -318,12 +333,12 @@
                                                         ]"
                                                     >
                                                         <img
-                                                            loading="lazy"
+                                                            alt="bootstrap templates for blog"
                                                             class="img-fluid"
+                                                            loading="lazy"
                                                             src="{{
                                                                 articleImageUrls[2]
                                                             }}"
-                                                            alt="bootstrap templates for blog"
                                                         />
                                                     </a>
                                                 </div>
@@ -337,6 +352,10 @@
                                                     "
                                                 >
                                                     <a
+                                                        [routerLink]="[
+                                                            '/articles/',
+                                                            listArticles[2].id
+                                                        ]"
                                                         [style.background-color]="
                                                             listArticles[2]
                                                                 .category
@@ -347,10 +366,6 @@
                                                             badge badge-primary
                                                             rounded-0
                                                         "
-                                                        [routerLink]="[
-                                                            '/articles/',
-                                                            listArticles[2].id
-                                                        ]"
                                                         >{{
                                                             listArticles[2]
                                                                 .category.name
@@ -404,12 +419,12 @@
                                                         ]"
                                                     >
                                                         <img
-                                                            loading="lazy"
+                                                            alt="bootstrap blog wordpress theme"
                                                             class="img-fluid"
+                                                            loading="lazy"
                                                             src="{{
                                                                 articleImageUrls[3]
                                                             }}"
-                                                            alt="bootstrap blog wordpress theme"
                                                         />
                                                     </a>
                                                 </div>
@@ -423,6 +438,10 @@
                                                     "
                                                 >
                                                     <a
+                                                        [routerLink]="[
+                                                            '/articles/',
+                                                            listArticles[3].id
+                                                        ]"
                                                         [style.background-color]="
                                                             listArticles[3]
                                                                 .category
@@ -433,10 +452,6 @@
                                                             badge badge-primary
                                                             rounded-0
                                                         "
-                                                        [routerLink]="[
-                                                            '/articles/',
-                                                            listArticles[3].id
-                                                        ]"
                                                         >{{
                                                             listArticles[3]
                                                                 .category.name
@@ -490,12 +505,12 @@
                                                         ]"
                                                     >
                                                         <img
-                                                            loading="lazy"
+                                                            alt="blog website templates bootstrap"
                                                             class="img-fluid"
+                                                            loading="lazy"
                                                             src="{{
                                                                 articleImageUrls[4]
                                                             }}"
-                                                            alt="blog website templates bootstrap"
                                                         />
                                                     </a>
                                                 </div>
@@ -509,6 +524,10 @@
                                                     "
                                                 >
                                                     <a
+                                                        [routerLink]="[
+                                                            '/articles/',
+                                                            listArticles[4].id
+                                                        ]"
                                                         [style.background-color]="
                                                             listArticles[4]
                                                                 .category
@@ -519,10 +538,6 @@
                                                             badge badge-primary
                                                             rounded-0
                                                         "
-                                                        [routerLink]="[
-                                                            '/articles/',
-                                                            listArticles[4].id
-                                                        ]"
                                                         >{{
                                                             listArticles[4]
                                                                 .category.name
@@ -556,6 +571,7 @@
                         </section>
                     </div>
                 </div>
+
                 <a
                     *ngFor="
                         let article of listArticlesRunner;
