--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -70,7 +70,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-md-3 col-lg-3 col-sm-4" id="rating">
                 <span class="globalRat">
                     {{ globalRate * 10 | number: "1.0-2" }} %</span
@@ -110,7 +109,6 @@
                     </div>
                 </form>
             </div>
-
             <div class="container text-light" *ngIf="studios !== undefined">
                 <div class="row">
                     <div class="col">
@@ -237,8 +235,22 @@
                                                     }}
                                                 </p>
                                                 <br />
+                                                <button
+                                                    (click)="
+                                                        deleteAnimeComment(
+                                                            comment.user.id
+                                                        )
+                                                    "
+                                                    *ngIf="
+                                                        adminStatus ===
+                                                        'ROLE_ADMIN'
+                                                    "
+                                                    class="btn btn-danger"
+                                                    type="button"
+                                                >
+                                                    KILL
+                                                </button>
                                             </div>
-
                                             <div
                                                 class="
                                                     container
@@ -288,7 +300,7 @@
                                                 </button>
                                                 <button
                                                     (click)="
-                                                        deleteAnimeComment()
+                                                        deleteAnimeComment(-667)
                                                     "
                                                     *ngIf="userHasComment"
                                                     class="btn btn-danger"
