--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -92,6 +92,14 @@
                             <span
                                 >-{{ comment.date | date: "dd/MM/yyyy" }}</span
                             >
+                            <button
+                                (click)="deleteArticleComment(comment.user.id)"
+                                *ngIf="adminStatus === 'ROLE_ADMIN'"
+                                class="btn btn-danger"
+                                type="button"
+                            >
+                                KILL
+                            </button>
                             <br />
                             <p>{{ comment.body }}</p>
                         </div>
@@ -137,7 +145,7 @@
                                     id="delete-button"
                                     type="button"
                                     class="btn btn-danger"
-                                    (click)="deleteArticleComment()"
+                                    (click)="deleteArticleComment(-667)"
                                 >
                                     Delete your comment
                                 </button>
