--- a/src/app/article/article.component.css
+++ b/src/app/article/article.component.css
@@ -2,6 +2,15 @@ body {
     outline-width: 0;
 }
 
+#titre {
+    display: inline-block;
+}
+
+#deleteButton {
+    float: right;
+    display: inline-block;
+}
+
 .container {
     background-color: rgba(40, 43, 48, 0.95);
     border-radius: 0.3em;
