added about us page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -45,15 +45,6 @@
                         </span>
                     </a>
                     <a
-                        class="li-ic"
-                        href="https://www.linkedin.com/in/naelmezdari/"
-                        aria-label="Linkedin"
-                    >
-                        <span style="font-size: 3em; color: royalblue">
-                            <i class="fa fa-linkedin"></i>
-                        </span>
-                    </a>
-                    <a
                         class="ins-ic"
                         href="https://www.instagram.com/onlyweebsofficial/"
                         aria-label="Instagram"
@@ -84,27 +75,10 @@
                 <p>
                     Welcome to OnlyWeebs, the world's most active online anime
                     and manga community and database.
-                    <a [routerLink]="['#!']">About us</a>
+                    <a [routerLink]="['/about-us']">About us</a>
                 </p>
             </div>
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                <h5 class="text-uppercase font-weight-bold">Be proactive</h5>
-                <hr
-                    class="
-                        deep-purple
-                        accent-2
-                        mb-4
-                        mt-0
-                        d-inline-block
-                        mx-auto
-                    "
-                    style="width: 60px"
-                />
-                <p><a [routerLink]="['#!']">OnlyWeebs Live</a></p>
-                <p><a [routerLink]="['#!']">OnlyWeebs Forum</a></p>
-                <p><a [routerLink]="['#!']">Send a Ticket to admins</a></p>
-                <p><a [routerLink]="['#!']">Report a bug</a></p>
-            </div>
+
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                 <h5 class="text-uppercase font-weight-bold">Useful links</h5>
                 <hr
@@ -119,8 +93,6 @@
                     style="width: 60px"
                 />
                 <p><a [routerLink]="['/account']">Your Account</a></p>
-                <p><a [routerLink]="['#']">Become an Premium member!</a></p>
-                <p><a [routerLink]="['#']">Weeb Shop</a></p>
                 <p><a [routerLink]="['/help']">Help</a></p>
             </div>
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -149,6 +121,6 @@
     </div>
     <div class="footer-copyright text-center py-3">
         © 2020 Copyright:
-        <a [routerLink]="['/home']"> OnlyWeebs.com</a>
+        <a [routerLink]="['/home']"> onlyweebs.csid.agilitejoviale.fr</a>
     </div>
 </footer>
