users have a page now + you can click on ther names to go to the page + added a deleted user check

--- a/src/app/onelist/onelist.component.css
+++ b/src/app/onelist/onelist.component.css
@@ -6,6 +6,16 @@
     color: #aaaaaa;
 }
 
+#authorr:hover {
+    color: #097ce7;
+    text-decoration: underline;
+}
+
+#author:hover {
+    color: #097ce7;
+    text-decoration: underline;
+}
+
 a {
     color: white;
     text-decoration: none;
