--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -42,6 +42,8 @@
     margin: 1rem 0 0 0;
     font-size: 0.8rem;
     text-align: center;
+    height: 35vh;
+    overflow-y: scroll;
 }
 
 .card {
