--- a/src/app/anime-list-display/anime-list-display.component.html
+++ b/src/app/anime-list-display/anime-list-display.component.html
@@ -1,7 +1,7 @@
 <div class="row" id="rowList">
     <div
         *ngFor="let list of lists; let i = index"
-        class="col-lg-5 col-md-6 col-12"
+        class="col-lg-6 col-md-6 col-12 custom"
         id="{{ !lists[i + 1] && i % 2 === 0 ? 'solo' : 'list' }}"
     >
         <a [routerLink]="['/lists', list.id]" id="boxLink">
