--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -13,9 +13,10 @@
         </button>
     </div>
 </div>
-
-<app-anime-list-display
+<div id="stonks">
+    <app-anime-list-display
     [lists]="lists"
     [isDefault]="'all_custom'"
 ></app-anime-list-display>
+</div>
 </body>
