another commit for user profile fron

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,11 +7,17 @@
                         <div class="account-settings">
                             <div class="user-profile">
                                 <div class="user-avatar">
-                                    <img loading="lazy" *ngIf="profilePictureUrl !== undefined"
-                                        src="{{ profilePictureUrl }}" alt="profile image" />
+                                    <img
+                                        loading="lazy"
+                                        *ngIf="profilePictureUrl !== undefined"
+                                        src="{{ profilePictureUrl }}"
+                                        alt="profile image"
+                                    />
                                 </div>
                                 <h5 class="user-name">{{ user.username }}</h5>
-                                <p id="firstname">{{user.firstname}} {{user.lastname}}</p>
+                                <p id="firstname">
+                                    {{ user.firstname }} {{ user.lastname }}
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -21,7 +27,15 @@
                 <div class="card h-100">
                     <div class="card-body">
                         <div class="row gutters">
-                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div
+                                class="
+                                    col-xl-12
+                                    col-lg-12
+                                    col-md-12
+                                    col-sm-12
+                                    col-12
+                                "
+                            >
                                 <div class="about">
                                     <h5 class="mb-2 text-primary">About</h5>
                                     <p id="bioo">{{ user.bio }}</p>
@@ -30,7 +44,11 @@
                             </div>
                         </div>
                         <div *ngIf="userLists !== undefined" class="custom">
-                            <app-anime-list-display [lists]="userLists" [isDefault]="'all_custom'">
+                            <app-anime-list-display
+                                [lists]="userLists"
+                                [isDefault]="'all_custom'"
+                                [userId]="user.id"
+                            >
                             </app-anime-list-display>
                         </div>
                     </div>
@@ -45,6 +63,6 @@
                 <p data-p="User was deleted">User was deleted</p>
             </div>
         </div>
-        <div id="particles-js"></div>        
+        <div id="particles-js"></div>
     </div>
 </body>
