--- a/src/app/user/user.component.sass
+++ b/src/app/user/user.component.sass
@@ -1,17 +1,17 @@
-body 
+body
     color: white
 
-.account-settings .user-profile 
+.account-settings .user-profile
     margin: auto
     padding-bottom: 1vh
     text-align: center
 
 
-.account-settings .user-profile .user-avatar 
+.account-settings .user-profile .user-avatar
     margin: 0 0 1rem 0
 
 
-.account-settings .user-profile .user-avatar img 
+.account-settings .user-profile .user-avatar img
     width: 7vw
     height: 7vw
     -webkit-border-radius: 100px
@@ -19,26 +19,25 @@ body
     border-radius: 100px
 
 
-.account-settings .user-profile h5.user-name 
+.account-settings .user-profile h5.user-name
     margin: 0 0 0.5rem 0
 
 
-.account-settings .user-profile 
+.account-settings .user-profile
     margin: 0
     font-size: 0.8rem
     font-weight: 400
 
 
-#bioo 
-    margin: 1rem 0 0 0
+#bioo
     font-size: 0.8rem
     text-align: justify
     height: 30vh
     overflow-y: scroll
-    margin-bottom: 1vh
+    margin: 1rem 0 1vh
 
 
-.card 
+.card
     background-color: rgba(40, 43, 48, 0.75)
     -webkit-border-radius: 5px
     -moz-border-radius: 5px
@@ -47,16 +46,16 @@ body
     margin-bottom: 1rem
 
 
-.lists 
+.lists
     padding-top: 1vh
     padding-bottom: 1vh
     margin: auto
-    width: 80vw
+    width: 82vw
 
 
-.custom 
+.custom
     margin: auto
-    width: 65vw
+    width: 66vw
 
 
 .error-page
@@ -67,7 +66,7 @@ body
     justify-content: center
     text-align: center
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif
-    height: 80vh
+    height: 90vh
 
 #container
     margin-top: 3vh
